[finishes #183967987] Provide admins/supporters with a table of users within the admin page.

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -32,9 +32,9 @@
             <h2>HyperSupportDesk - Admin Console</h2><br>
 
         <p id="output"></p><br><br><br>
-        <p>View Tickets</p>
+        <p>View Users</p>
         <div class="center">
-        <table style="width:auto" id="ticket">
+        <table style="width:auto" id="table">
             <tr>
                 <td>ID</td>
                 <td>NAME</td>
@@ -52,8 +52,7 @@
         <% }); %>
         </table>
     </div>
-
-
+    
         </main>
 
         <script>
