[finishes #184008063] Resolved manual navigation errors

--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -20,6 +20,7 @@
                 <li><a href="/about">About Us</a></li>
                 <li><a href="/dashboard">Dashboard</a></li>
                 <li><a href="/login">Login</a></li>
+                <li><a href="/admin">Admin</a></li>
                 <li><a href="/quickFixes">QuickFixes</a></li>
             </ul>
         </nav>
