--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -33,6 +33,7 @@ function unescapeCharacters(string) {
                     <li><a href="/about">About Us</a></li>
                     <li><a href="/dashboard">Dashboard</a></li>
                     <li><a href="/login">Login</a></li>
+                    <li><a href="/admin">Admin</a></li>
                     <li><a href="/quickFixes">QuickFixes</a></li>
                 </ul>
             </nav>
