[Finishes #183998179] Fixed navigation overlap

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -14,7 +14,7 @@
     <div id="wrapper">
 
         <header>
-            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo" align="left">
+            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo">
         </header>
 
         <nav>
