removed line breaks in admin page and updated schema.

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -15,7 +15,7 @@
 
         <header>
             <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo">
-        </header>
+        
 
         <nav>
             <ul>
@@ -26,7 +26,8 @@
                 <li><a href="/admin">Admin</a></li>
                 <li><a href="/quickFixes">QuickFixes</a></li>
             </ul>
-        </nav><br><br><br>
+        </nav>
+        </header>
 
         <main id="hero">
             <h2>HyperSupportDesk - Admin Console</h2><br>
