--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -15,22 +15,24 @@
 
         <header>
             <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo">
-        
-
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About Us</a></li>
-                <li><a href="/dashboard">Dashboard</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/admin">Admin</a></li>
-                <li><a href="/quickFixes">QuickFixes</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/admin">Admin</a></li>
+                    <li><a href="/quickFixes">QuickFixes</a></li>
+                </ul>
+                <% if (user) { %>
+                    <form action="/" method="POST" class="logout" id="logout-section"> 
+                        <p>Logged in as: <%= user.email %> <button id="logoutbutton"type="submit">Logout</button></p>               
+                    </form>
+                <% } %>
+            </nav>
         </header>
 
         <main id="hero">
-            <h2>HyperSupportDesk - Admin Console</h2><br>
+            <h2>HyperSupportDesk - Admin Console</h2>
 
             <p>Here you will be able to edit accounts.<br>
             Select a user id and what role you want to designate to it.<br>
@@ -60,7 +62,7 @@
             <button type="submit">Update</button>
 
         </form>
-        <p id="output"></p><br><br><br>
+        <p id="output"></p>
         <p>View Users</p>
         <div class="center">
         <table style="width:auto" id="table">
