--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,12 +17,16 @@
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/about">About Us</a></li>
                     <li><a href="/dashboard">Dashboard</a></li>
                     <li><a href="/login">Login</a></li>
                     <li><a href="/admin">Admin</a></li>
                     <li><a href="/quickFixes">QuickFixes</a></li>
                 </ul>
+                <% if (user) { %>
+                    <form action="/" method="POST" class="logout" id="logout-section"> 
+                        <p>Logged in as: <%= user.email %> <button id="logoutbutton"type="submit">Logout</button></p>               
+                    </form>
+                <% } %>
             </nav>
         </header>
 
@@ -31,13 +35,12 @@
             <h2>HyperSupportDesk - Home</h2>
             <p>Welcome to HyperSupportDesk, the place for all of your IT ticketing needs.</p>
             <p>Feel free to navigate throughout the site.</p>
+            <h3>About Us</h3>
+            <p>We are a local business comprised of four individuals.</p>
+            <p>We are commited to making the lives of others easier by solving </p>
+            <p>problems that they may have in the workplace that are related to computers.</p>
+            <p>Technology is changing every day, we try our best to solve modern problems so you don't have to.</p>
         </main>
-
-        <form action="/" method="POST" class="logout"> 
-
-             <button id="logoutbutton"type="submit">Logout</button>
-            
-        </form>
         
        
     </div>
