--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,6 +183,16 @@ footer {
 	font-size: .95em;
 }	
 
+#register {
+	text-align: right;
+	width: fit-content;
+	margin: 0 auto;
+}
+
+#register-submit {
+	text-align: center;
+}
+
 /* Tablet */
 @media only screen and (max-width: 75.5rem) {
 
