--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -33,7 +33,7 @@
     <main id="hero">
         <h2>HyperSupportDesk - Register</h2>
 
-    <form action="/register" method="POST">
+    <form id="register" action="/register" method="POST">
         <div>
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required>
@@ -50,7 +50,9 @@
             <label for="confirm">Confirm Password</label>
             <input type="password" id="confirm" name="confirm" required>
         </div>
-        <button type="submit">Register</button>
+        <div id="register-submit">
+            <button type="submit">Register</button>
+        </div>
     </form>
     <p id="output"></p>
     <div class="requirements">
