--- a/views/pages/quickFixes.ejs
+++ b/views/pages/quickFixes.ejs
@@ -32,44 +32,49 @@
 
         <main id="hero">
             <h2>HyperSupportDesk - QuickFixes</h2>
+            <ol id="quickfixes">
+                <li>Computer won't turn on
+                <ul>
+                    <li>- Make sure computer is plugged in.</li>
+                    <li>- Make sure monitor is plugged in to computer and to a power outlet.</li>
+                    <li>- Hold down power button.</li>
+                    <li>- Unplug from power outlet and press power button to discharge the device.</li>
+                    <li>- let charge for 30-60 minutes.</li>
+                </ul></li>
 
-            <dl>
-                <dt>Computer won't turn on</dt>
-                <dd>- Make sure computer is plugged in.</dd>
-                <dd>- Make sure monitor is plugged in to computer and to a power outlet.</dd>
-                <dd>- Hold down power button.</dd>
-                <dd>- Unplug from power outlet and press power button to discharge the device.</dd>
-                <dd>- let charge for 30-60 minutes.</dd><br>
-
-                <dt>Computer is running slow</dt>
-                <dd>- Reboot computer.</dd>
-                <dd>- Close some Chrome tabs or unneeded apps.</dd>
-                <dd>- Run "Disk Cleanup".</dd><br>
+                <li>Computer is running slow
+                <ul>
+                    <li>- Reboot computer.</li>
+                    <li>- Close some Chrome tabs or unneeded apps.</li>
+                    <li>- Run "Disk Cleanup".</li>
+                </ul></li>
                 
-                <dt>Can't acces the internet</dt>
-                <dd>- Make sure the ethernet cable in plugged in if it is a desktop.</dd>
-                <dd>- Disconnect from the network and reconnect.</dd>
-                <dd>- Reboot the device.</dd>
-                <dd>- The site may be down, try again in 30 minutes.</dd><br>
+                <li>Can't acces the internet
+                <ul>
+                    <li>- Make sure the ethernet cable in plugged in if it is a desktop.</li>
+                    <li>- Disconnect from the network and reconnect.</li>
+                    <li>- Reboot the device.</li>
+                    <li>- The site may be down, try again in 30 minutes.</li>
+                </ul></li>
 
-                <dt>Mouse is not working</dt>
-                <dd>- If it is wireless, turn it off then back on.</dd>
-                <dd>- If it is wireless, Change out batteries.</dd>
-                <dd>- If it is wired, make sure it is plugged in.</dd>
-                <dd>- Get a brand new mouse.</dd><br>
+                <li>Mouse is not working
+                <ul>
+                    <li>- If it is wireless, turn it off then back on.</li>
+                    <li>- If it is wireless, Change out batteries.</li>
+                    <li>- If it is wired, make sure it is plugged in.</li>
+                    <li>- Get a brand new mouse.</li>
+                </ul></li>
 
-                <dt>There is no audio</dt>
-                <dd>- Make sure the video or tab isn't muted.</dd>
-                <dd>- Select the speaker icon in the bottom right corner of the screen and make sure it is high enough to hear.</dd>
-                <dd>- Select a different option under the speaker icon.</dd>
-                <dd>- Make sure you don't have headphone connected to the device.</dd>
-                <dd>- Restart the device.</dd><br>
-                
-              </dl>
-
+                <li>There is no audio
+                <ul>
+                    <li>- Make sure the video or tab isn't muted.</li>
+                    <li>- Select the speaker icon in the bottom right corner of the screen and make sure it is high enough to hear.</li>
+                    <li>- Select a different option under the speaker icon.</li>
+                    <li>- Make sure you don't have headphone connected to the device.</li>
+                    <li>- Restart the device.</li>
+                </ul></li>
+            </ol>
         </main>
-
-        </script>
     </div>
 </body>
 
