Cleaned up quickFixes.ejs.

--- a/views/pages/quickFixes.ejs
+++ b/views/pages/quickFixes.ejs
@@ -35,43 +35,43 @@
             <ol id="quickfixes">
                 <li>Computer won't turn on
                 <ul>
-                    <li>- Make sure computer is plugged in.</li>
-                    <li>- Make sure monitor is plugged in to computer and to a power outlet.</li>
-                    <li>- Hold down power button.</li>
-                    <li>- Unplug from power outlet and press power button to discharge the device.</li>
-                    <li>- let charge for 30-60 minutes.</li>
+                    <li>Make sure computer is plugged in.</li>
+                    <li>Make sure monitor is plugged in to computer and to a power outlet.</li>
+                    <li>Hold down power button.</li>
+                    <li>Unplug from power outlet and press power button to discharge the device.</li>
+                    <li>let charge for 30-60 minutes.</li>
                 </ul></li>
 
                 <li>Computer is running slow
                 <ul>
-                    <li>- Reboot computer.</li>
-                    <li>- Close some Chrome tabs or unneeded apps.</li>
-                    <li>- Run "Disk Cleanup".</li>
+                    <li>Reboot computer.</li>
+                    <li>Close some Chrome tabs or unneeded apps.</li>
+                    <li>Run "Disk Cleanup".</li>
                 </ul></li>
                 
                 <li>Can't acces the internet
                 <ul>
-                    <li>- Make sure the ethernet cable in plugged in if it is a desktop.</li>
-                    <li>- Disconnect from the network and reconnect.</li>
-                    <li>- Reboot the device.</li>
-                    <li>- The site may be down, try again in 30 minutes.</li>
+                    <li>Make sure the ethernet cable in plugged in if it is a desktop.</li>
+                    <li>Disconnect from the network and reconnect.</li>
+                    <li>Reboot the device.</li>
+                    <li>The site may be down, try again in 30 minutes.</li>
                 </ul></li>
 
                 <li>Mouse is not working
                 <ul>
-                    <li>- If it is wireless, turn it off then back on.</li>
-                    <li>- If it is wireless, Change out batteries.</li>
-                    <li>- If it is wired, make sure it is plugged in.</li>
-                    <li>- Get a brand new mouse.</li>
+                    <li>If it is wireless, turn it off then back on.</li>
+                    <li>If it is wireless, Change out batteries.</li>
+                    <li>If it is wired, make sure it is plugged in.</li>
+                    <li>Get a brand new mouse.</li>
                 </ul></li>
 
                 <li>There is no audio
                 <ul>
-                    <li>- Make sure the video or tab isn't muted.</li>
-                    <li>- Select the speaker icon in the bottom right corner of the screen and make sure it is high enough to hear.</li>
-                    <li>- Select a different option under the speaker icon.</li>
-                    <li>- Make sure you don't have headphone connected to the device.</li>
-                    <li>- Restart the device.</li>
+                    <li>Make sure the video or tab isn't muted.</li>
+                    <li>Select the speaker icon in the bottom right corner of the screen and make sure it is high enough to hear.</li>
+                    <li>Select a different option under the speaker icon.</li>
+                    <li>Make sure you don't have headphone connected to the device.</li>
+                    <li>Restart the device.</li>
                 </ul></li>
             </ol>
         </main>
